--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "rm -rf .next out dist",
-    "prepare": "husky install"
+    "clean": "rm -rf .next out dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
@@ -38,9 +37,6 @@
     "@radix-ui/react-slot": "^1.0.2",
     "@radix-ui/react-tabs": "^1.0.4",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "@supabase/auth-helpers-nextjs": "^0.8.7",
-    "@supabase/auth-ui-react": "^0.4.6",
-    "@supabase/auth-ui-shared": "^0.1.8",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.55.0",
     "@tanstack/react-table": "^8.13.2",
@@ -69,7 +65,7 @@
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "autoprefixer": "^10.4.21",
-    "eslint": "^8",
+    "eslint": "^9.0.0",
     "eslint-config-next": "15.4.6",
     "eslint-config-prettier": "^9.1.0",
     "eslint-plugin-prettier": "^5.1.3",
