--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "rm -rf .next out dist"
+    "clean": "rm -rf .next out dist",
+    "postinstall": "npm run build"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
