--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "rm -rf .next out dist",
-    "postinstall": "npm run build"
+    "clean": "rm -rf .next out dist"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
