feat: implementa sistema completo de aprovação de usuários e gestão de perfis - Adiciona página de aprovação de usuários com dados existentes - Cria sistema de gestão de usuários com aprovação/rejeição - Implementa controle de perfis e níveis de acesso - Corrige componente Select para resolver erros de compilação - Atualiza sidebar com menu de aprovação - Adiciona documentação completa do sistema

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,6 +16,8 @@
     "noImplicitAny": false,
     "noImplicitReturns": false,
     "noImplicitThis": false,
+    "forceConsistentCasingInFileNames": true,
+    "skipLibCheck": true,
     "plugins": [
       {
         "name": "next"
