--- a/package.json
+++ b/package.json
@@ -59,10 +59,12 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3.0.0",
     "@types/file-saver": "^2.0.7",
-    "@types/node": "^20",
+    "@types/json5": "^0.0.30",
+    "@types/node": "^20.19.11",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/tailwindcss": "^3.0.11",
+    "@types/ws": "^8.18.1",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
     "autoprefixer": "^10.4.21",
