fix: corrigir valores tipo_conta para constraint do banco - Alterar valores de 'Conta Corrente' para 'Corrente' - Alterar valores de 'Conta Poupança' para 'Poupança' - Resolver erro de constraint pessoas_juridicas_tipo_conta_check - Adicionar componentes de erro e layouts isolados - Melhorar documentação e scripts de setup

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "type-check": "tsc --noEmit",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
-    "clean": "rm -rf .next out dist"
+    "clean": "rm -rf .next out dist",
+    "setup-db": "node scripts/setup-database.js"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.3.4",
